Remove java 10 feature
Make compatible with jipack current jdk